--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,55 @@
 .custom-navbar {
     background-image: url('/assets/img/background/header-publik.png');
-    background-size: cover; /* Adjust this based on your design preference */
+    background-size: cover;
     background-repeat: no-repeat;
-    height: 70px; /* Adjust the height as needed */
-    /* Add any other styling you want for the navbar */
+    height: 70px;
 }
 
 .ellipsis-text {
     display: -webkit-box;
-    -webkit-line-clamp: 2; /* Limit to 2 lines */
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
 
 .navbar-nav .nav-link {
-    color: white; /* Warna teks default */
+    color: white;
 }
 
 .navbar-nav .nav-link.active {
     color: white;
     border-bottom: 3px solid white;
+}
+
+.text-promosi {
+    font-size: 1.5rem;
+    width: 50%;
+}
+
+.btn-daftar {
+    width: 50%;
+}
+
+
+@media screen and (max-width: 450px) {
+    .text-promosi {
+        font-size: 1rem;
+        width: 100%;
+    }
+    .btn-daftar {
+        width: 100%;
+        margin-top: 1rem;
+    }
+    
+}
+
+@media screen and (min-width: 450px) {
+    .text-promosi {
+        font-size: 1.3rem;
+        padding: 0 1rem;
+    }
+    .btn-daftar {
+        padding: 0 1rem;
+    }
+    
 }
