--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,89 +1,121 @@
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+body {
+  font-family: "Mulish", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #c0c0c0;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 .custom-navbar {
-    background-image: url('/assets/img/background/header-publik.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: #ed1c24;
+  background-image: url("/assets/img/background/header-publik.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #ed1c24;
 }
 
 .ellipsis-text {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .navbar-nav .nav-link {
-    color: white;
+  color: white;
 }
 
 .navbar-nav .nav-link.active {
-    color: white;
-    border-bottom: 3px solid white;
-    
+  color: white;
+  border-bottom: 3px solid white;
 }
 
 .text-promosi {
-    font-size: 1.5rem;
-    width: 50%;
+  font-size: 1.5rem;
+  width: 50%;
 }
 
 .btn-daftar {
-    width: 50%;
+  width: 50%;
 }
 
-
-
 .card-width {
-    width: 14.5rem;
+  width: 14.5rem;
 }
 
 @media screen and (max-width: 450px) {
-    .nav-link, .nav-link.active {
-        width: 20%;
-    }
-    .text-promosi {
-        font-size: 0.8rem;
-        width: 100%;
-    }
-    .btn-daftar {
-        width: 100%;
-        margin-top: 1rem;
-    }
+  .nav-link,
+  .nav-link.active {
+    width: 20%;
+  }
 
-    .card-width {
-        width: 100%;
-    }
+  .text-promosi {
+    font-size: 0.8rem;
+    width: 100%;
+  }
 
-    .card-img-top {
-        width: 100%;
-        height: 12rem;
-        object-fit: cover;
-    }
-    
+  .btn-daftar {
+    width: 100%;
+    margin-top: 1rem;
+  }
+
+  .card-width {
+    width: 100%;
+  }
+
+  .card-img-top {
+    width: 100%;
+    height: 12rem;
+    object-fit: cover;
+  }
 }
 
-@media screen and (max-width: 600px ) {
-    .nav-link, .nav-link.active {
-        width: 20%;
-    }
-    .text-promosi {
-        font-size: 1.1rem;
-        width: 100%;
-    }
-    .btn-daftar {
-        width: 100%;
-        margin-top: 1rem;
-    }
-    
+@media screen and (max-width: 600px) {
+  .nav-link,
+  .nav-link.active {
+    width: 20%;
+  }
+
+  .text-promosi {
+    font-size: 1.1rem;
+    width: 100%;
+  }
+
+  .btn-daftar {
+    width: 100%;
+    margin-top: 1rem;
+  }
+
+  .card-width {
+    width: 100%;
+  }
+
+  .card-img-top {
+    width: 100%;
+    height: 12rem;
+    object-fit: cover;
+  }
 }
 
-@media screen and (min-width: 600px ) {
-    .text-promosi {
-        font-size: 1.3rem;
-        padding: 0 1rem;
-    }
-    .btn-daftar {
-        padding: 0 1rem;
-    }
-    
+@media screen and (min-width: 600px) {
+  .text-promosi {
+    font-size: 1.3rem;
+    padding: 0 1rem;
+  }
+
+  .btn-daftar {
+    padding: 0 1rem;
+  }
 }
